--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 
 <body>
-    <H1>
-        My Portfolio
-    </H1>
+    <h1>
+        <u>My Portfolio</u>
+    </h1>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
@@ -34,29 +36,31 @@
      -->
      <div>
       <h1>Abraham Gonzalez</h1>
-      <h2>Software Developer</h2>
+      <h2 id="title">Software Developer</h2>
       <hr>
 
-      <p> My <i>favorite</i> thing about programming is problem solving</p>
+      <p> My <i><b>favorite</i></b> thing about programming is problem solving</p>
 
       <img 
          alt="Developer's Portrait"
          src="https://www.thesprucepets.com/thmb/kV_cfc9P4QWe-klxZ8y--awxvY4=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/adorable-white-pomeranian-puppy-spitz-921029690-5c8be25d46e0fb000172effe.jpg"
+        
       >
-      <h3>About Me</h3>
-      <p> I'm baby offal chambray food truck sartorial, farm-to-table vexillologist chia. Kale chips paleo asymmetrical taxidermy pour-over letterpress edison bulb trust fund put a bird on it typewriter hot chicken hella subway tile. Narwhal chillwave cloud bread normcore. Vegan shoreditch chartreuse forage tattooed tofu VHS fanny pack raclette mlkshk cronut. Kickstarter schlitz migas, palo santo pour-over banh mi freegan VHS.
+      <h3 class="index-h3">About Me</h3>
+      <p id="main-p"> I'm baby offal chambray food truck sartorial, farm-to-table vexillologist chia. Kale chips paleo asymmetrical taxidermy pour-over letterpress edison bulb trust fund put a bird on it typewriter hot chicken hella subway tile. Narwhal chillwave cloud bread normcore. Vegan shoreditch chartreuse forage tattooed tofu VHS fanny pack raclette mlkshk cronut. Kickstarter schlitz migas, palo santo pour-over banh mi freegan VHS.
       </p>
 
-      <h3>My Projects</h3>
+      <h3 class="index-h3">My Projects</h3>
 
       <ul>
         <li>Project 1</li>
         <li>Project 2</li>
         <li>Project 3</li>
       </ul>
-       <h3> Contact Me</h3>
+       <h3 class="index-h3"> Contact Me</h3>
       <p> <b>Phone:</b> (202) 555-1234</p>
-
+     <!-- <box class="container">Email</box> -->
+     <!-- attempted to add a box-->
       <p> <b>Email:</b> <a href=mailto:fake@email.com> Abraham@email.com</a></p>
 
     </div>
