--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <p> My <i><b>favorite</i></b> thing about programming is problem solving</p>
 
-      <img 
+      <img class="profile"
          alt="Developer's Portrait"
          src="https://www.thesprucepets.com/thmb/kV_cfc9P4QWe-klxZ8y--awxvY4=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/adorable-white-pomeranian-puppy-spitz-921029690-5c8be25d46e0fb000172effe.jpg"
         
@@ -53,9 +53,9 @@
       <h3 class="index-h3">My Projects</h3>
 
       <ul>
-        <li>Project 1</li>
-        <li>Project 2</li>
-        <li>Project 3</li>
+        <li><img class="project" alt= "Project 1" src= "images/Project1.png"></li>
+        <li><img class="project" alt= "Project 2" src= "images/Project2.png"></li>
+        <li><img class="project" alt= "Project 3" src= "images/Project3.png"></li>
       </ul>
        <h3 class="index-h3"> Contact Me</h3>
       <p> <b>Phone:</b> (202) 555-1234</p>
